# api-autotests

./: .dockerignore  .gitignore  README.md  pyproject.toml
data/: user_factory.py
docker/: Dockerfile  docker-compose.yaml
docker/init/: 001_create_users.sql
docs/api_specification/: API_Specification.md  User_Guide.md
docs/test_cases/user/: TC_API_USERS_CREATE_NEG_006.md  TC_API_USERS_CREATE_POS_001.md  TC_API_USERS_DELETE_POS_005.md  TC_API_USERS_GET_BY_ID_NEG_007.md  TC_API_USERS_GET_BY_ID_POS_002.md  TC_API_USERS_PARTIAL_UPDATE_PATCH_POS_004.md  TC_API_USERS_UPDATE_NEG_008.md  TC_API_USERS_UPDATE_PUT_POS_003.md
src/app/: deps.py  main.py  schemas.py
src/app/routers/: users.py
src/clients/: api_client.py  users_client.py
src/config/: settings.py
src/db/: queries.py
src/models/: user.py
tests/: conftest.py
